# crab-rt

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml  config_fast_builds
.github/workflows/: ci.yaml  coverage.yaml  integration.yaml
benches/: benchmark.rs  multithreading.rs  rayon.rs
examples/: moving_rt_weekend.rs  rt_nextweek.rs  rt_weekend.rs
src/: aabb.rs  bvh.rs  camera.rs  hitable.rs  lib.rs  main.rs  perlin.rs  ray.rs  raytracer.rs  scene.rs  utils.rs  vec.rs
src/core/: mod.rs  ray.rs  vec.rs
src/materials/: dielectric.rs  isotropic.rs  lambertian.rs  light.rs  material.rs  metal.rs  mod.rs
src/objects/: aabox.rs  aarect.rs  constant_medium.rs  mod.rs  moving_sphere.rs  object.rs  rotate.rs  sphere.rs  translate.rs
src/textures/: checker.rs  image.rs  mod.rs  monochrome.rs  noise.rs  texture.rs
