[package]
name = "crab-rt"
version = "0.1.0"
authors = ["TrAyZeN <lbenitoproduction@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[profile.dev]
opt-level = 2
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug-assertions = false

[dependencies]
image = { version = "0.23.12", default-features = false, features = ["png"] }
rand = { version = "0.8.2", features = ["nightly", "simd_support"] }

# [dev-dependencies]
# criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "multithreading"
harness = false
path = "benches/multithreading.rs"

[[bench]]
name = "rayon"
harness = false
path = "benches/rayon.rs"
