[package]
name = "crab-rt"
version = "0.1.0"
authors = ["TrAyZeN <lbenitoproduction@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[profile.dev]
opt-level = 2
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug-assertions = false
debug = 1 # For profiling

[dependencies]
image = { version = "0.24.5", default-features = false, features = ["jpeg", "jpeg_rayon"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "multithreading"
harness = false
path = "benches/multithreading.rs"

[[bench]]
name = "rayon"
harness = false
path = "benches/rayon.rs"
